--- a/StockMarketApp/StockMarketApp.csproj
+++ b/StockMarketApp/StockMarketApp.csproj
@@ -67,4 +67,10 @@
 		<PackageReference Include="Polly" Version="8.4.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Services\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Services\" />
+	</ItemGroup>
 </Project>
