--- a/StockMarketApp/StockMarketApp.csproj
+++ b/StockMarketApp/StockMarketApp.csproj
@@ -70,9 +70,20 @@
 	<ItemGroup>
 	  <None Remove="Services\" />
 	  <None Remove="Constants\" />
+	  <None Remove="Helpers\" />
+	  <None Remove="Interface\" />
+	  <None Remove="ViewModels\" />
+	  <None Remove="Views\" />
+	  <None Remove="Services\StockService\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Services\" />
 	  <Folder Include="Constants\" />
+	  <Folder Include="Helpers\" />
+	  <Folder Include="Interface\" />
+	  <Folder Include="ViewModels\" />
+	  <Folder Include="Views\" />
+	  <Folder Include="Services\" />
+	  <Folder Include="Services\StockService\" />
 	</ItemGroup>
 </Project>
